--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -13,89 +13,55 @@
 <meta property="article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
 {{ if $.Param "author" }}
 <meta name="author" content="{{ $.Param "author" }}">
-<meta property="article:author" content="{{ .Permalink | absLangURL }}@{{ $.Param "author" }}">
+<meta property="article:author" content="{{ .Permalink | absURL }}@{{ $.Param "author" }}">
 {{ else if .Site.Params.myname }}
 <meta name="author" content="{{ .Site.Params.myname }}">
 {{ end }}
 {{ with $.Param "contact" }}<meta name="contact" content="{{ . }}">{{ end }}
+
+
+{{/* Open Graph (social card) */}}
 <meta property="og:site_name" content="{{ .Site.Title }}">
 <meta property="og:title" content="{{ .Title }}">
-<meta property="og:url" content="{{ .Permalink | absLangURL }}">
+<meta property="og:url" content="{{ .Permalink | absURL }}">
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
 <meta property="og:description" content="{{ $.Param "description" }}">
-{{/* {{ if .Params.meta_image }}
-  {{ with .Params.meta_image }}
-    <meta property="og:image" content="{{ . | absURL }}">
-    <meta property="og:image:url" content="{{ . | absURL }}">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:app:name:iphone" content="{{ $.Site.Title }}">
-    <meta property="twitter:title" content="{{ $.Param "title" }}">
-    <meta property="twitter:description" content="{{ $.Param "description" }}">
+
+{{/* social image */}}
+{{ $fileName := ""}}
+{{ with .Params.featuredImage }}
+  {{ if eq . true }}
+    {{ $fileName = "featured-image*" }}      
+  {{ else }}
+    {{ $fileName = . }}      
   {{ end }}
-{{ else if .Params.image }}
-  {{ with .Params.image }}
-    <meta property="og:image" content="{{ . | absURL }}">
-    <meta property="og:image:url" content="{{ . | absURL }}">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:app:name:iphone" content="{{ $.Site.Title }}">
-    <meta property="twitter:title" content="{{ $.Param "title" }}">
-    <meta property="twitter:description" content="{{ $.Param "description" }}">
+
+  {{ with $.Resources.GetMatch $fileName }}
+    {{ $original := .  }}
+    {{ $process := $original.Fill "1200x630" }}
+    {{ $imgFileExt := path.Ext $original.RelPermalink }}
+    {{ $imgFileName := path.Join $.Page.File.Dir (printf "/social-image%s" $imgFileExt) }}
+    {{ $img := slice $process | resources.Concat $imgFileName }}
+    <meta property="og:image" content="{{ $img.Permalink }}">
+
+    {{/* mark original and temporary images for cleanup */}}
+    {{ partial "add-to-cleanup" ( dict "ctx" $ "img" $original ) }}
+    {{ partial "add-to-cleanup" ( dict "ctx" $ "img" $process ) }}
   {{ end }}
-{{ else if $.Param "meta_image" }}
-  {{ with $.Param "meta_image" }}
-    <meta property="og:image" content="{{ . | absURL }}">
-    <meta property="og:image:url" content="{{ . | absURL }}">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:app:name:iphone" content="{{ $.Site.Title }}">
-    <meta property="twitter:title" content="{{ $.Param "title" }}">
-    <meta property="twitter:description" content="{{ $.Param "description" }}">
-  {{ end }}
-{{ end }} */}}
+{{ else }}
+    <meta property="og:image" content="social-image.jpg">
+{{ end }}
+
+{{/* Twitter card */}}
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:title" content="{{ $.Param "title" }}">
+<meta property="twitter:description" content="{{ $.Param "description" }}">
+
 {{ hugo.Generator }}
-{{/* <meta name="msapplication-TileColor" content="{{ $.Scratch.Get "themeTitleColor" | default "#fff" }}"> */}}
-<!-- Chrome, Firefox OS and Opera -->
-{{/* <meta name="theme-color" content="{{ $.Scratch.Get "themeNavbarColor" | default "#fff" }}"> */}}
-<!-- Windows Phone -->
-{{/* <meta name="msapplication-navbutton-color" content="{{ $.Scratch.Get "themeNavbarColor" | default "#fff" }}"> */}}
-<!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="{{ $.Scratch.Get "themeNavbarColor" | default "#fff" }}">
-{{ if $.Param "canonicalUrl" }}
-<link rel="canonical" href="{{ $.Param "canonicalUrl" | absLangURL }}">
-{{ else }}
-<link rel="canonical" href="{{ .Permalink | absLangURL }}">
-{{ end }}
+<link rel="canonical" href="{{ .Permalink | absURL }}">
 {{/* <link rel="manifest" href="{{ "manifest.json" | relURL }}"> */}}
-{{ if $.Site.Params.useFaviconGenerator }}
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ "favicon/apple-icon-57x57.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{ "favicon/apple-icon-60x60.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ "favicon/apple-icon-72x72.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ "favicon/apple-icon-76x76.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ "favicon/apple-icon-114x114.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ "favicon/apple-icon-120x120.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ "favicon/apple-icon-144x144.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ "favicon/apple-icon-152x152.png" | relURL }}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ "favicon/apple-icon-180x180.png" | relURL }}">
-  <link rel="icon" type="image/png" sizes="192x192" href="{{ "favicon/android-icon-192x192.png" | relURL }}">
-  <link rel="icon" type="image/png" sizes="192x192" href="{{ "favicon/android-icon-512x512.png" | relURL }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon/favicon-32x32.png" | relURL }}">
-  <link rel="icon" type="image/png" sizes="96x96" href="{{ "favicon/favicon-96x96.png" | relURL }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ "favicon/favicon-16x16.png" | relURL }}">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-{{ else }}
-  {{/* {{ if (fileExists "static/favicon.svg") -}} */}}
-  <link rel="icon" href="{{ "favicon.svg" | relURL }}" type="image/svg+xml" />
-  {{/* {{- end }} */}}
-  
-  {{/* {{ if (fileExists "static/apple-touch-icon.png") -}} */}}
-  <link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | relURL }}">
-  {{/* {{- end }} */}}
-  
-  {{/* <link rel="shortcut icon" href="{{ "favicon.ico" | relURL }}" type="image/x-icon"> */}}
-  {{/* <link rel="icon" href="{{ "favicon.png" | relURL }}" sizes="any" type="image/png" /> */}}
 
-  {{/* {{ if (fileExists "static/logo.svg") -}} */}}
-  <link rel="icon" href="{{ "logo-small.svg" | relURL }}" sizes="any" type="image/svg+xml" />
-  {{/* {{- end }} */}}
-
-{{ end }}
+<link rel="icon" href="{{ "favicon.svg" | relURL }}" type="image/svg+xml" />
+<link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | relURL }}">
+<link rel="icon" href="{{ "logo-small.svg" | relURL }}" sizes="any" type="image/svg+xml" />
