--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -49,7 +49,7 @@
     {{ partial "add-to-cleanup" ( dict "ctx" $ "img" $process ) }}
   {{ end }}
 {{ else }}
-    <meta property="og:image" content="social-image.jpg">
+  <meta property="og:image" content="{{ `social-image.jpg` | absURL }}">
 {{ end }}
 
 {{/* Twitter card */}}
