--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,6 +23,12 @@
           </div>
 
           <article>
+            {{ with .Params.description }}
+              <p class="lead">
+                {{ . }}
+              </p>
+            {{ end }}
+
             {{ .Content }}
           </article>
 
