--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -20,7 +20,17 @@
 {{ with $.Param "contact" }}<meta name="contact" content="{{ . }}">{{ end }}
 
 {{/* Robots */}}
-{{ with .Params.robotsdisallow }}<meta name="robots" content="noindex, nofollow, noarchive">{{ else }}<meta name="robots" content="index, follow, archive">{{ end }}
+{{ $taxonomies := slice }}
+{{ range $k, $v := site.Taxonomies }}
+    {{ $taxonomies = $taxonomies | append $k }}
+{{ end }}
+{{ $follow := "" }}
+{{ if and (not .Params.robotsdisallow) (not (in $taxonomies .Data.Plural)) }}
+  {{ $follow = "index, follow" }}
+{{ else }}
+  {{ $follow = "noindex, nofollow" }}
+{{ end }}
+<meta name="robots" content="{{ $follow }}, noarchive, nosnippet">
 
 {{/* Open Graph (social card) */}}
 <meta property="og:site_name" content="{{ .Site.Title }}">
