--- a/layouts/partials/lib/function/source-code.html
+++ b/layouts/partials/lib/function/source-code.html
@@ -3,11 +3,11 @@
   <div class="">
 
     {{/* Declaration */}}
-    {{ $name := $.ctx.Page.File.BaseFileName }}
+    {{ $name := $.ctx.Page.Title }}
     {{ $description := "" }}
     {{ with .comment }}{{ $description = . }}{{ end }}
-    {{ $code_block := "```iecst\n" }}      
-    
+    {{ $code_block := "```iecst\n" }}
+
     {{/* comment */}}
     {{ with $description }}
       {{ $code_block = printf "%s(*%s*)\n" $code_block . }}
@@ -31,7 +31,7 @@
 
 
     {{/* read the YAML data from the project file */}}
-    {{ $projectData := partial "lib/get-yaml-data" ( dict "ctx" $.ctx.Parent "fileName" "definition" ) }}
+    {{ $projectData := partial "lib/get-yaml-data" ( dict "ctx" $.ctx.FirstSection "fileName" "definition" ) }}
 
     {{ $code_header := partial "lib/code-header.html" (dict "name" $name "project" $projectData "description" $description "latestChangelog" $latestChangelog ) }}
     {{ $code_block = printf "%s%s\n" $code_block $code_header }}
