--- a/layouts/partials/lib/prerequisite-table.html
+++ b/layouts/partials/lib/prerequisite-table.html
@@ -1,6 +1,6 @@
 {{/* prerequisites as list */}}
-<div class="overflow-x-auto">
-  <table class="whitespace-nowrap">
+<div>
+  <table>
     <thead>
       <tr>
         <th scope="col" class="w-1/4">prerequisite</th>
