--- a/layouts/partials/taxonomy/taxonomy-categories.html
+++ b/layouts/partials/taxonomy/taxonomy-categories.html
@@ -1,12 +1,10 @@
 {{ if (ne (len .Site.Taxonomies.categories) 0) }}
-  {{ $collapseId := printf "_%s" (substr (md5 ("/categories/" | relURL)) 0 5) }}
-
-  <section class="px-4">
-    <a href="{{printf "#%s" $collapseId}}" data-toggle="collapse" class="sidebar-item italic">
-      {{ partial "svgs/heroicons/bookmark.svg" (dict "class" "h-4 mr-1" ) }}
+  <section>
+    <span class="sidebar-item italic py-4 md:py-2 pl-2">
+      {{ partial "svgs/heroicons/bookmark.svg" (dict "class" "h-4 mr-1" ) }}      
       <span class="">Categories</span>
-    </a>
-    <div id="{{ $collapseId }}" class="collapse flex flex-row flex-wrap">
+    </span>
+    <div class="flex flex-row flex-wrap pl-4">    
       {{ range $index, $element := .Site.Taxonomies.categories }}
         <a href="{{ $element.Page.RelPermalink }}" class="mr-2 mb-2 flex flex-row items-center rounded bg-default-soft shadow-sm text-xs text-default hover:text-default-dark">
           <span class="pl-1 pr-1 py-0.5">
